<resources>
    <string name="app_name">iLock</string>
    <string name="main_button_open_door">Open The Door</string>
    <string name="settings">Settings</string>
    <string name="dialog_send_request_failed_title">Failed to send door open request</string>
    <string name="dialog_send_request_failed_message">Sending the door opening request failed, please check your network settings or contact the administrator.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_i_know">I know</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_send_request_title">Door open request sent</string>
    <string name="dialog_send_request_message">A door opening request has been sent to the server, and your operation will be recorded on the server. Please do not submit the request repeatedly. If the door does not open, please confirm whether your key is registered or contact the administrator.</string>
    <string name="dialog_copy">Copy</string>
    <string name="dialog_generated">Generated</string>
    <string name="dialog_time_error_title">Forbidden operation on midnight</string>
    <string name="dialog_time_error_message">Please use other methods to open the door midnight. Your actions will be recorded on the server, please do not submit requests maliciously.</string>
    <string name="dialog_without_key_title">Public key not found</string>
    <string name="dialog_without_key_message">There is no key locally. Please click \"Generate\" below to generate a key. After generating the key, please contact the administrator to register. You can view the key again in the settings in the upper right corner. It takes a certain amount of time to generate the key, and the software is not stuck. The specific time depends on your mobile phone configuration.</string>
    <string name="dialog_key_generated_title">Generated success</string>
    <string name="dialog_key_generated_message_part1">Generated success! Please copy the public key and recorded it on server.</string>
    <string name="dialog_key_generated_message_part2">The key is valid for 6 months, please re-register after expiration.</string>
    <string name="dialog_publickey_title">Public key information</string>
    <string name="biometric_prompt_title">Need to be authenticated</string>
    <string name="biometric_prompt_message">Please verify your identity to confirm the operation. Your actions will be recorded on the server, please do not send the door open request maliciously.</string>
    <string name="dialog_no_public_key_found_title">No public key found</string>
    <string name="dialog_no_public_key_found_message">No public key is found in the device, please return to the main interface and click \"Open The Door\" to generate a key.</string>
    <string name="read_public_key_failed">Read PublicKey Failed.</string>
    <string name="public_key_copy_success">The public key has been copied to the clipboard</string>
    <string name="settings_public_key_title">Public Key</string>
    <string name="settings_public_key_summary">Click to get the Public Key.</string>
    <string name="settings_feed_back_title">Feed Back</string>
    <string name="settings_feed_back_summary">Report bug or suggestion on GitHub Issue.</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_author_summary">Follow me on GitHub!</string>
    <string name="settings_open_source_title">Open Source</string>
    <string name="settings_open_source_summary">Get the source code on GitHub.</string>
    <string name="settings_software">Software</string>
    <string name="settings_about">About</string>
    <string name="biometric_prompt_failed">Failed</string>
    <string name="biometric_prompt_success">Success</string>
    <string name="biometric_prompt_error">Error:</string>
    <string name="settings_server_ip_title">Server IP</string>
    <string name="settings_server_ip_summary">Enter the server IP here.</string>
    <string name="settings_user_id_title">User ID</string>
    <string name="settings_user_id_summary">Put your user id here provided by administrator.</string>
</resources>