<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_software">

        <Preference
            app:key="public_key"
            app:title="@string/settings_public_key_title"
            android:summary="@string/settings_public_key_summary" />

        <Preference
            app:key="feed_back"
            app:title="@string/settings_feed_back_title"
            android:summary="@string/settings_feed_back_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/AimerNeige/iLock/issues" />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_about">

        <Preference
            app:key="author"
            app:title="@string/settings_author_title"
            android:icon="@drawable/profile_128"
            android:summary="@string/settings_author_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/AimerNeige/" />

        </Preference>

        <Preference
            app:key="open_source"
            app:title="@string/settings_open_source_title"
            android:icon="@drawable/github_logo_64px"
            android:summary="@string/settings_open_source_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/AimerNeige/iLock/" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>